fix: :bug: update solutions

--- a/week3/solution.tex
+++ b/week3/solution.tex
@@ -173,7 +173,7 @@ with the arbiter.}
         \label{fig:2a}
     \end{figure}
 
-    \item{Yes, the system is safe when synchronized with an Arbiter. There is no such a state where the atomic proposition is \{green, green\}.}\\
+    \item{Yes, the system is safe when synchronized with an Arbiter. There is no such a state where the atomic proposition is $\{\text{green}_1, \text{green}_2\}$.}\\
     However, in this design, the lights immediately switch from green to red. We would expect another state(s), e.g. a yellow light state, which would result in a slower and safer switch from green to red. 
 \end{enumerate}
 
